<resources>
    <string name="app_name">Assignment-1-Calculator</string>
    <string name="division">/</string>
    <string name="equals">=</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="multiply">*</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="subtract">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="addition">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="advance_with_history">Advance-With History</string>
    <string name="standard_no_history">Standard-No History</string>
</resources>