<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="3"

    >

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Hello World!"
        android:textSize="30sp"

        android:layout_weight="0.7"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

    <Button
        android:id="@+id/button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="30sp"
        android:backgroundTint="@color/Salmon"
        android:textColor="@color/black"
        style="?android:attr/buttonBarButtonStyle" />
    <Button
        android:id="@+id/button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="30sp"
        android:backgroundTint="@color/Salmon"
        android:textColor="@color/black"
        style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_minus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Salmon"
            android:text="@string/subtract"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"


        >

        <Button
            android:id="@+id/button_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button_equal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Salmon"
            android:text="@string/equals"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck" />
        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textSize="30sp"
            android:backgroundTint="@color/Salmon"
            android:textColor="@color/black"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


</LinearLayout>